deprecated-fluxcd/gitops/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: gitops-ingress
  namespace: gitops
spec:
  rules:
  - host: gitops.cloud.lambacher.eu
    http:
      paths:
      - backend:
          service:
            name: gitops-weave-gitops
            port:
              number: 9001
        path: /
        pathType: Prefix
  # TLS is deactived in ingress, since default cert of traefik will take care of it (TLS per default)
  # tls:
  # - hosts:
  #   - gitops.cloud.lambacher.eu

status:
  loadBalancer: {}
